--- a/nextcloud/nginx/nginx.conf
+++ b/nextcloud/nginx/nginx.conf
@@ -30,7 +30,7 @@ http {
     #gzip  on;
 
     upstream php-handler {
-        server app:9000;
+        server nextcloud_nginx:9000;
     }
 
     server {
